--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -101,7 +101,7 @@ The first relates to how individuals form impressions of marginalized job candid
         
             <span class="logo__mark">></span>
             <span class="logo__text ">
-                Following questions wherever they lead</span>
+                hello</span>
             <span class="logo__cursor" style=
                   "
                    
