Refined About page and portrait styling

--- a/public/cv/index.html
+++ b/public/cv/index.html
@@ -101,7 +101,7 @@ Education PhD in Linguistics, Queen Mary University of London, UK (2025) MA in L
         
             <span class="logo__mark">></span>
             <span class="logo__text ">
-                hello</span>
+                Scott Kunkel | Language researcher</span>
             <span class="logo__cursor" style=
                   "
                    
